<resources>
    <string name="app_name">News App</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nothing_to_show">Nothing to Show</string>

    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="create_new_account">Create new account</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone">Phone</string>
    <string name="already_got_account">Already got account</string>
    <string name="register">register</string>
    <string name="try_again">Try again</string>
    <string name="wrong_password">wrong password</string>
    <string name="registered_successfully">registered successfully</string>
    <string name="wrong_email">Wrong email</string>

    <string name="preference_loggin">pref_loggin</string>
    <string name="remember_me">Remember Me</string>
    <string name="logout">logout</string>

    <string name="title">title_tv</string>
    <string name="auther">auther_tv</string>
    <string name="description">description_tv</string>
    <string name="link">link_tv</string>
    <string name="published">published_tv</string>
    <string name="content">content_tv</string>

</resources>